Fixed bug #24198 (Invalid recursion detection in array_merge_recurcive())